# WebHarvest

./: .env.example  .gitignore  README.md  WEBHARVEST.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_proxy_configs.py  b2c3d4e5f6a7_add_webhook_fields.py  c3d4e5f6a7b8_add_schedules_table.py  d42cd40a3083_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  database.py  exceptions.py  metrics.py  rate_limiter.py  redis.py  security.py
backend/app/models/: __init__.py  api_key.py  job.py  job_result.py  llm_key.py  proxy_config.py  schedule.py  user.py
backend/app/schemas/: auth.py  batch.py  crawl.py  map.py  proxy.py  schedule.py  scrape.py  search.py  settings.py
backend/app/services/: auth.py  browser.py  content.py  crawler.py  dedup.py  document.py  llm_extract.py  mapper.py  proxy.py  scraper.py  search.py  webhook.py
backend/app/tests/: conftest.py
backend/app/workers/: batch_worker.py  celery_app.py  crawl_worker.py  map_worker.py  schedule_worker.py  scrape_worker.py  (+1 more)
backend/tests/: conftest.py  test_api_auth.py  test_api_batch.py  test_api_crawl.py  test_api_schedule.py  test_api_scrape.py  test_api_usage.py  test_dedup.py  test_document.py  test_search.py  test_webhook.py
frontend/: next.config.js  package.json  tailwind.config.ts
sdk/: pyproject.toml
sdk/webharvest/: __init__.py  client.py  exceptions.py  models.py
(+38 files in other folders)
