[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webharvest"
version = "0.1.0"
description = "Python SDK for the WebHarvest web scraping platform"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
